Fix nav menu visibility for desktop and mobile and make mobile nav fullscreen

--- a/style.css
+++ b/style.css
@@ -23,16 +23,26 @@ body {
   right: 0;
   top: 0;
   left: 0;
-  bottom: 44px;
+  bottom: 0;
   background-color: white;
   flex-direction: column;
   color: white;
-  z-index: 99;
+  z-index: 999;
   margin: 0;
   padding: 0;
   align-items: flex-start;
   justify-content: flex-start;
   gap: 40px;
+}
+
+#head-nav {
+  position: fixed;
+  display: inline;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  z-index: 999;
 }
 
 .nav-link {
@@ -404,6 +414,10 @@ ul.font-icons {
     width: 100%;
     height: 1040px;
   }
+  
+  .close-menu{
+    display: none;
+  }
 
   .project-cards {
     display: flex;
@@ -429,7 +443,7 @@ ul.font-icons {
   }
 
   .desktop-nav {
-    display: block;
+    display: block !important;
     text-align: center;
   }
 
@@ -443,13 +457,6 @@ ul.font-icons {
     font-family: Inter, sans-serif;
     font-weight: 600;
     padding-left: 30px;
-  }
-
-  #head-nav {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
   }
 
   .name {
